// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/SendButton Default 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <button
    className="sc-1x831cm-0 dZNuRb"
    disabled={false}
    onClick={[Function]}
  >
    <svg
      fill="none"
      height="24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M22.707 1.293a1 1 0 0 1 0 1.414l-11 11a1 1 0 0 1-1.414-1.414l11-11a1 1 0 0 1 1.414 0Z"
        fill="#171717"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M22.707 1.293a1 1 0 0 1 .237 1.037l-7 20a1 1 0 0 1-1.858.076l-3.844-8.648-8.648-3.844a1 1 0 0 1 .076-1.858l20-7a1 1 0 0 1 1.037.237ZM4.711 9.11l6.695 2.975a1 1 0 0 1 .508.508l2.975 6.695L20.37 3.63 4.711 9.11Z"
        fill="#171717"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sc-90c4yq-0 bmmsAZ"
    >
      Send Message
    </span>
  </button>
</div>
`;

exports[`Storyshots Atoms/SendButton Disabled 1`] = `
<div
  style={
    {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "position": "relative",
    }
  }
>
  <button
    className="sc-1x831cm-0 dZNuRb"
    disabled={true}
    onClick={[Function]}
  >
    <svg
      fill="none"
      height="24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M22.707 1.293a1 1 0 0 1 0 1.414l-11 11a1 1 0 0 1-1.414-1.414l11-11a1 1 0 0 1 1.414 0Z"
        fill="#171717"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M22.707 1.293a1 1 0 0 1 .237 1.037l-7 20a1 1 0 0 1-1.858.076l-3.844-8.648-8.648-3.844a1 1 0 0 1 .076-1.858l20-7a1 1 0 0 1 1.037.237ZM4.711 9.11l6.695 2.975a1 1 0 0 1 .508.508l2.975 6.695L20.37 3.63 4.711 9.11Z"
        fill="#171717"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="sc-90c4yq-0 bmmsAZ"
    >
      Send Message
    </span>
  </button>
</div>
`;
